# latam-flight-delay-challenge

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  delay_model.json  exploration.ipynb  fitted_columns.pkl  model.py  scaler.pkl
docs/: challenge.md
reports/: junit.xml  stress-test.html
reports/html/: challenge___init___py.html  challenge_api_py.html  challenge_model_py.html  index.html  status.json  utils_utils_py.html
tests/api/: test_api.py
tests/model/: test_model.py
tests/stress/: api_stress.py
tests/utils/: test_utils.py
utils/: utils.py
