[tool.poetry]
name = "latam-flight-delay-challenge"
version = "0.1.0"
description = "Implementation of a predictive model for flight delays at SCL Airport"
authors = ["Tu Nombre <tu.correo@example.com>"]
readme = "README.md"
packages = [
  { include = "challenge" }
]

[tool.poetry.dependencies]
python = "^3.11.11"
fastapi = "0.86.0"
uvicorn = "0.15.0"
pydantic = "1.10.2"
scikit-learn = "1.3.0"
xgboost = "^2.1.3"
anyio = "^3.7.1"
pandas = "^2.2.3"


[tool.poetry.dev-dependencies]
matplotlib = "3.7.2"
numpy = "<2"
seaborn = "0.12.2"
locust = "^2.15.1"  # Actualizado a una versión 2.x
coverage = "5.5"
pytest = "6.2.5"
pytest-cov = "2.12.1"
mockito = "1.2.2"
ipykernel = "^6.29.5"
flake8 = "^4.0.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
